--- a/testTraderApi.vcxproj.filters
+++ b/testTraderApi.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="main.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="NonCopyable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
