--- a/testTraderApi.vcxproj
+++ b/testTraderApi.vcxproj
@@ -21,6 +21,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -103,6 +104,7 @@
     <ClCompile Include="ConfigReader.cpp" />
     <ClCompile Include="LogDisplayer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="QuoteSpi.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -116,6 +118,7 @@
     <ClInclude Include="LogDisplayer.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="NonCopyable.h" />
+    <ClInclude Include="QuoteSpi.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="StlUtil.h" />
     <ClInclude Include="TraderSpi.h" />
