--- a/testTraderApi.vcxproj.filters
+++ b/testTraderApi.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="StlUtil.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="QuoteSpi.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -57,6 +60,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="NonCopyable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="QuoteSpi.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
